# rpi-timelapse-cam

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/milestones/v1.0-phases/01-capture-daemon-storage-management/: 01-02-PLAN.md  01-02-SUMMARY.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md
.planning/milestones/v1.0-phases/02-web-ui-timeline-browser/: 02-01-PLAN.md  02-02-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-05-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/01-capture-daemon-storage-management/: 01-01-PLAN.md  01-01-SUMMARY.md  01-03-PLAN.md  01-VERIFICATION.md
.planning/phases/02-web-ui-timeline-browser/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-03-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-CONTEXT.md
.planning/phases/03-timelapse-generation/: 03-01-PLAN.md  03-01-VERIFICATION.md  03-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: timelapse.yml
scripts/: setup.sh
src/timelapse/: __main__.py  config.py  daemon.py  generate.py  lock.py  status.py
src/timelapse/camera/: __init__.py  base.py  detect.py  picamera.py  usb.py
src/timelapse/storage/: __init__.py  cleanup.py  manager.py
src/timelapse/web/: __init__.py  auth.py  health.py  thumbnails.py
src/timelapse/web/blueprints/: control.py  latest.py  timeline.py
systemd/: timelapse-capture.service  timelapse-web.service
(+10 files in other folders)
