[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rpi-timelapse-cam"
version = "0.1.0"
description = "Raspberry Pi timelapse camera daemon with web UI and video generation"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0",
    "pillow>=12.0",
    "flask>=3.1,<4",
    "python-pam>=2.0",
    "Flask-HTTPAuth>=4.8",
]

[project.optional-dependencies]
camera = [
    "picamera2>=0.3.33",
    "opencv-python-headless>=4.9",
]

[project.scripts]
timelapse = "timelapse.__main__:main"
timelapse-generate = "timelapse.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
